--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,15 @@
+
+$primary: #388afc;
+$primaryLight: #0858f9;
+$buttontransparent: #ffffff0d;
+$textprimary: #f0f0f0;
+$textmuted: #ffffff59;
+$backgroundLight: #12171d;
+$backgroundSecondary: #202020;
+$backgroundHighlight: #ffffff0f;
+$backgroundDark: #0D1117;
+$border: #388afc73;
+
 $white-light-tint: rgba(255, 255, 255, 0.3);
 $white-thick-tint: rgba(255, 255, 255, 0.9);
 $white: #fff;
